crates/conduit-derive/tests/compile_fail/command_borrowed_param.rs
use conduit_derive::command;
#[command]
fn greet(name: &str) -> String { name.to_string() }
fn main() {}
